--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   padding: 20px;
   border-radius: 5px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
 }
 
 .course:hover {
@@ -25,21 +26,19 @@ body {
 }
 
 .course-preview {
-  cursor: pointer;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .description {
-  margin-top: 10px;
   overflow: hidden;
   max-height: 0;
   transition: max-height 0.3s ease;
 }
 
 .hidden {
-  max-height: 0;
-  padding: 0 20px;
+  max-height: 0 !important;
+  padding: 0 20px !important;
   transition: max-height 0.3s ease, padding 0.3s ease;
 }
